@@ -22,6 +22,9 @@
 	Added ability to remove filename-specific highlighting rules with
 	`:highlight clear {pattern}`.  Thanks to aleksejrs.
 
+	Added completion of filename-specific highlight groups for :highlight
+	command.
+
 	Changed :filter command to accept pattern (//, ////, {} or {{}}).  Thanks
 	to rbong.
 
